--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,48 +1,70 @@
-<footer class="footer">
-    <div class="title">
-        Звоните, пишите. <span>Мы на связи</span>
+<footer>
+    <div class="container leftContainer">
+        <a href="#" class="imgContainer">
+            <img src="./assets/images/footer/logo.png" alt="#">
+        </a>
+
+        <a href="#" class="littleText">
+            Авторство
+        </a>
     </div>
 
-    <div class="cartContainer">
-        <div class="frame" style="position:relative;overflow:hidden;"><a href="https://yandex.by/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.by/maps/2/saint-petersburg/house/furshtatskaya_ulitsa_1_14/Z0kYdQNpTUcOQFtjfXV1dHxlYw==/?ll=30.349429%2C59.945067&utm_medium=mapframe&utm_source=maps&z=17.09" style="color:#eee;font-size:12px;position:absolute;top:14px;">Фурштатская улица, 1/14 — Яндекс Карты</a><iframe src="https://yandex.by/map-widget/v1/-/CCUVuPUzWB" width="712" height="300" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
-
-        <div class="contactsContainer">
-            <div class="contacts">
-                <p>8 800 111 33 22</p>
-                <p>sales@sdelka-crm.ru</p>
-                <p>Telegram</p>
-            </div>
-
-            <button>Задать вопрос в чате</button>
-        </div>
+    <div class="container">
+        <a href="#" class="bigText">
+            Интеграции
+        </a>
+        <a href="#" class="bigText">
+            Внедрение CRM
+        </a>
+        <a href="#" class="bigText">
+            Цены
+        </a>
+        <a href="#" class="bigText">
+            Материалы
+        </a>
+        <a href="#" class="littleText">
+            Что ещё есть в Сделке
+        </a>
+        <a href="#" class="littleText">
+            В разработке
+        </a>
     </div>
 
-    <div class="adres">
-        Санкт-Петербург г, ул Фурштатская, д. 28, литера А, помещ. 20-Н Р.М. №1
+    <div class="container">
+        <a href="#" class="bigText">
+            О компании
+        </a>
+
+        <a href="#" class="littleText">
+            Отзывы и кейсы клиентов
+        </a>
+
+        <a href="#" class="littleText">
+            О нас
+        </a>
+
+        <a href="#" class="littleText">
+            Реквизиты
+        </a>
+
+        <a href="#" class="bigText">
+            Блог
+        </a>
     </div>
 
-    <div class="socialNetworkContainer">
-        <div class="socialTitle">
-            <p class="textTitle">Давайте дружить в соцсетях</p>
-            <p class="textSubtitle">Делимся знаниями и новостями в сфере недвижимости и маркетинге:</p>
-        </div>
+    <div class="container rightContainer">
+        <a href="#" class="bigText">
+            8 800 111 33 22
+        </a>
 
-        <div class="btnContainer">
-            <button>
-                <svg>
-                    <use href="#tgIco"></use>
-                </svg>
-            </button>
-            <button>
-                <svg>
-                    <use href="#vkIco"></use>
-                </svg>
-            </button>
-            <button>
-                <svg>
-                    <use href="#youtube"></use>
-                </svg>
-            </button>
+        <div>
+            <a href="#" class="littleText">
+                Политика обработки персональных данных
+            </a>
+            
+            <a href="#" class="littleText">
+                Договор оферты
+            </a>
         </div>
     </div>
 </footer>
