--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -2809,4 +2809,348 @@
         }
     }
 
+    .cta4 {
+        background: url(../images/cta4/items.png) 85% top no-repeat, url(../images/cta4/bg.png);
+        padding-left: 18rem;
+        padding-bottom: 12rem;
+        padding-top: 12.3rem;
+
+        .cta4Title {
+            font-family: 'Mulish';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 4.8rem;
+            line-height: 5.8rem;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            margin-bottom: 6rem;
+
+            span {
+                color: #A0F615;
+            }
+        }
+
+        button {
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 1.6rem;
+            line-height: 2rem;
+            text-align: center;
+            color: #FFFFFF;
+            padding: 1rem 2rem;
+            background: #3A3A3B;
+            border-radius: 0.6rem;
+            border-top: 0.1rem solid #9FF612;
+            border-left: 0.1rem solid #9FF612;
+            border-bottom: 0.3rem solid #9FF612;
+            border-right: 0.3rem solid #9FF612;
+        }
+    }
+
+    .contactsMainContainer {
+        background-image: url(../images/contactsMainContainer/footerBg.png);
+        background-color: #3A3A3B;
+        padding-top: 15rem;
+        padding-left: 18rem;
+        padding-right: 18rem;
+    
+        .title {
+            font-family: 'Mulish';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 7.2rem;
+            line-height: 9rem;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            width: 80.4rem;
+            margin-bottom: 7rem;
+    
+            span {
+                color: #9FF612;
+            }
+        }
+    
+        .cartContainer {
+            display: flex;
+            gap: 9.2rem;
+    
+            .frame {
+                border-radius: 2.4rem;
+                width: 71.2rem;
+                height: 30rem;
+            }
+    
+            .contactsContainer {
+                display: flex;
+                flex-direction: column;
+                gap: 5rem;
+    
+                .contacts {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 2rem;
+    
+                    p {
+                        font-family: 'Nunito Sans';
+                        font-style: normal;
+                        font-weight: 800;
+                        font-size: 2.4rem;
+                        line-height: 3.3rem;
+                        color: #FFFFFF;
+                    }
+                }
+    
+                button {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 1.6rem;
+                    line-height: 2rem;
+                    text-align: center;
+                    color: #FFFFFF;
+                    padding-top: 1rem;
+                    padding-bottom: 1rem;
+                    padding-right: 2rem;
+                    padding-left: 2rem;
+    
+                    background: #124BF6;
+                    border-bottom: 0.3rem solid #F86247;
+                    border-right: 0.3rem solid #F86247;
+                    border-top: 0.1rem solid #F86247;
+                    border-left: 0.1rem solid #F86247;
+                    border-radius: 0.6rem;
+                    
+                }
+            }
+        }
+    
+        .adres {
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 800;
+            font-size: 2.4rem;
+            line-height: 3.3rem;
+            color: #FFFFFF;
+            width: 64.4rem;
+            margin-top: 5rem;
+            margin-bottom: 7rem;
+        }
+    
+        .socialNetworkContainer {
+            border: 0.1rem solid #9FF612;
+            border-radius: 1.2rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding-left: 3rem;
+            padding-right: 4.2rem;
+            padding-top: 3rem;
+            padding-bottom: 3rem;
+    
+            .btnContainer {
+                display: flex;
+                gap: 2rem;
+    
+                button {
+                    background: #F86247;
+                    border-top: 0.1rem solid #9FF612;
+                    border-left: 0.1rem solid #9FF612;
+                    border-right: 0.4rem solid #9FF612;
+                    border-bottom: 0.4rem solid #9FF612;
+                    border-radius: 1.2rem;
+                    padding: 1.8rem;
+    
+                    svg {
+                        width: 4rem;
+                        height: 4rem;
+                        fill: #FFFFFF;
+                    }
+                }
+            }
+    
+            .socialTitle {
+                font-family: 'Nunito Sans';
+                display: flex;
+                flex-direction: column;
+                gap: 2rem;
+                .textTitle {
+                    
+                    font-style: normal;
+                    font-weight: 800;
+                    font-size: 2.4rem;
+                    line-height: 3.3rem;
+                    color: #9FF612;
+                }
+    
+                .textSubtitle {
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 1.8rem;
+                    line-height: 2.5rem;
+                    color: #FFFFFF;
+                    width: 45.4rem;
+                }
+            }
+        }
+    }
+
+    .development {
+        background: url(../images/footer/shum.png);
+        background-color: #3A3A3B;
+        padding-top: 15rem;
+        padding-left: 18rem;
+        padding-right: 11.2rem;
+
+        .developmentTitle {
+            font-family: 'Mulish';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 7.2rem;
+            line-height: 9rem;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            margin-bottom: 5rem;
+        }
+
+        .developmentSubtitle {
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 1.8rem;
+            line-height: 2.2rem;
+            color: #FFFFFF;
+            width: 72.2rem;
+        }
+
+        .categoriesContainer {
+            display: flex;
+            margin-top: 2.3rem;
+            gap: 9.1rem;
+            align-items: center;
+
+
+            .categories {
+                display: flex;
+                flex-direction: column;
+                gap: 2rem;
+
+                .cat {
+                    border-radius: 1.2rem;
+                    border: 0.1rem solid #9FF612;
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 2.4rem;
+                    line-height: 3.3rem;
+                    color: #FFFFFF;
+                    padding: 1.4rem 1.5rem 1.4rem 3rem;
+                    display: flex;
+                    justify-content: space-between;
+                    width: 52rem;
+
+                    .arrowContainer {
+                        background: #124BF6;
+                        border-top: 0.1rem solid #9FF612;
+                        border-left: 0.1rem solid #9FF612;
+                        border-right: 0.3rem solid #9FF612;
+                        border-bottom: 0.3rem solid #9FF612;
+                        border-radius: 0.6rem;
+                        padding: 0.8rem;
+                        display: flex;
+                        padding-right: 1.2rem;
+
+                        .arrow {
+                            width: 1.5rem;
+                            height: 1.5rem;
+                            border-top: 0.2rem solid #FFFFFF;
+                            border-right: 0.2rem solid #FFFFFF;
+                            transform: rotate(45deg);
+                        }
+
+                    }
+
+                    .arrowActContainer {
+                        background: #F86247;
+                        border-top: 0.1rem solid #9FF612;
+                        border-left: 0.1rem solid #9FF612;
+                        border-right: 0.3rem solid #9FF612;
+                        border-bottom: 0.3rem solid #9FF612;
+                        border-radius: 0.6rem;
+                        padding: 0.8rem;
+                        display: flex;
+                        padding-left: 1.2rem;
+                        padding-right: 0.6rem;
+
+                        .arrowAct {
+                            width: 1.5rem;
+                            height: 1.5rem;
+                            border-top: 0.2rem solid #FFFFFF;
+                            border-right: 0.2rem solid #FFFFFF;
+                            transform: rotate(-135deg);
+                        }
+                    }
+
+                    
+                }
+
+            }
+
+            .window {
+                padding: 4rem;
+                background: #F9F9F9;
+                border-radius: 1.2rem;
+
+                .windowTitle {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 800;
+                    font-size: 1.8rem;
+                    line-height: 2.5rem;
+                    color: #3A3A3B;
+                    margin-bottom: 2rem;
+                }
+
+                ul {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 2.5rem;
+                    margin-bottom: 3.3rem;
+
+                    li {
+                        position: relative;
+                        font-family: 'Nunito Sans';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 1.8rem;
+                        line-height: 2.2rem;
+                        color: #3A3A3B;
+                    }
+
+                    li:before {
+                        content: '';
+                        position: absolute;
+                        width: 1.2rem;
+                        height: 1.2rem;
+                        top: 0.7rem;
+                        left: -3rem;
+                        border: 0.2rem solid #124BF6;
+                        border-radius: 50%;
+                    }
+                }
+
+                .windowSubtitle {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 1.8rem;
+                    line-height: 2.2rem;
+                    color: #3A3A3B;
+                    margin-top: 3.6rem;
+                }
+            }
+        }
+
+    }
+
 }
