--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="logoContainer">
-        <img src="../assets/images/header/logo.png" alt="#">
+        <img src="./assets/images/header/logo.png" alt="#">
     </div>
     <div class="menuItemsContainer">
         <div class="menuItemsHelper">
