--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -27,9 +27,10 @@
     </div>
 
     <!-- JS -->
-    <!-- <script src="assets/js/components/swiper.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
     <script src="assets/js/app.js"></script>
-    <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
+
 </body>
 
 </html>
