--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -9,6 +9,7 @@
     padding-right: 18rem;
     justify-content: space-between;
     position: absolute;
+    z-index: 11111;
     width: 100%;
 
     .menuItemsContainer {
